# serde_deser_iter

./: Cargo.toml  Readme.md
examples/: aggregate.rs  data.json  deep_aggregate.rs  deep_aggregate_bitcoin.rs  deep_bitcoin.json  deep_data.json  find_item.rs  top_level_aggregate.rs  top_level_aggregate_movies.rs  top_level_find_item.rs
src/: lib.rs  top_level.rs
src/deep/: find.rs  fold.rs  for_each.rs  mod.rs  try_fold.rs
