[package]
name = "serde_iter"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189" }

[dev-dependencies]
serde_json = "1.0.107"
anyhow = "1.0.75"
serde = { version = "1.0.189" , features = ["derive"]}